@@ -1,3 +1,8 @@
+2006-12-13 Sandro Santilli <strk@refractions.net>
+
+	* precision::GeometrySnapper, precision::LineStringSnapper:
+	  Updated port information.
+
 2006-12-11 Sandro Santilli <strk@refractions.net>
 
 	* source/headers/geos/noding/SegmentIntersector.h: added virtual
